adding bootstrap abd jq and popperjs

--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Required meta tags always come first-->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <!-- Bootstrap CSS-->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+
     <title>Document</title>
 </head>
 <body>
-    <p>hi</p>
+    <h1>This is Professor</h1>
+    <p>We take responsbility of doing fine work in the area of what we believe it is the right direction
+        we have build something so fine so that it works just fine in hardest moments but as we go through the
+        the area we see something different.
+    </p>
+    <h3>Our partner</h3>
+
+    <h2>Something Else</h2>
+    <p>We take responsbility of doing fine work in the area of what we believe it is the right direction
+        we have build something so fine so that it works just fine in hardest moments but as we go through the
+        the area we see something different.</p>
+        <h3>The mouth of the year</h3>
+
+        <h2>Weekened Grand</h2>
+        <p>We take responsbility of doing fine work in the area of what we believe it is the right direction
+            we have build something so fine so that it works just fine in hardest moments but as we go through the
+            the area we see something different.
+        </p>
+        <h3>Something</h3>
+        <h2>Our Conclusion</h2>
+
+        <!-- jQuery first, then popper.js, then Bootstrap JS. -->
+        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+        <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
