--- a/index.html
+++ b/index.html
@@ -13,6 +13,28 @@
     <title>Document</title>
 </head>
 <body>
+
+   <!-- Fixed-top class is to make the nav bar appeared even if you scrol down-->
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <div class="container">
+            <!--Adding button as show/hide nav for phones screens-->
+            <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+
+            </button>
+            <a class="navbar-brand mr-auto" href="#">Ristorance Con Fusion</a>
+            <div class="collapse navbar-collapse" id="Navbar">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./aboutus.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                </ul>
+
+            </div>
+        </div>
+
+    </nav>
    <header class="jumbotron">
        <div class="container">
            <div class="row row-header">
@@ -75,7 +97,7 @@
                 <h5>Links</h5>
                 <ul class="list-unstyled">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="./aboutus.html">About</a></li>
                     <li><a href="#">Menu</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
