--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
@@ -25,10 +27,10 @@
             <a class="navbar-brand mr-auto" href="#">Ristorance Con Fusion</a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./aboutus.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#"> <span class="fa fa-home fa-lg"></span> Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./aboutus.html"> <span class="fa fa-info fa-lg"></span> About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"> <span class="fa fa-list fa-lg"></span> Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"> <span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
 
             </div>
@@ -106,18 +108,18 @@
                 <h5>Our Address</h5>
     
                     14535 HighWay, Jeddah SA <br>
-                TEL: 245824875245724O5 <br>
-                FAX: 29R09428534035 <br>
-                Mail: nsdnfkjsnfkbs@gmail.com                </address>
+                    <i class="fa fa-phone"></i>: 245824875245724O5 <br>
+                    <i class="fa fa-fax"></i>: 29R09428534035 <br>
+                    <i class="fa fa-envelope"></i>: nsdnfkjsnfkbs@gmail.com                </address>
             </div>
             <div class="col-12 col-sm-4 align-self-center">
                 <div class="text-center">
-                    <a href="www.google.come">Google +</a>
-                    <a href="www.google.com">Facebook</a>
-                    <a href="www.google.com">Linkedin</a>
-                    <a href="www.google.com">Twiter</a>
-                    <a href="www.google.com">Youtube</a>
-                    <a href="mailto">Mail</a>
+                    <a class="btn btn-social-icon btn-google" href="www.google.come"> <i class="fa fa-google-plus fa-lg"></i></a>
+                    <a class="btn btn-social-icon btn-facebook" href="www.google.com"> <i class="fa fa-facebook fa-lg"></i></a>
+                    <a class="btn btn-social-icon btn-linkedin" href="www.google.com"> <i class="fa fa-linkedin fa-lg"></i></a>
+                    <a class="btn btn-social-icon btn-twitter" href="www.google.com"> <i class="fa fa-twitter fa-lg"></i></a>
+                    <a class="btn btn-social-icon btn-youtube" href="www.google.com"> <i class="fa fa-youtube fa-lg"></i></a>
+                    <a class="btn btn-social-icon" href="mailto"> <i class="fa fa-mail fa-lg"></i></a>
                 </div>     
             </div>
         </div>
