--- a/aboutus.html
+++ b/aboutus.html
@@ -18,10 +18,10 @@
 
 <body>
  <!-- Fixed-top class is to make the nav bar appeared even if you scrol down-->
- <nav class="navbar navbar-dark navbar-expand-sm fixed-top nav-color-css">
+ <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
     <div class="container">
         <!--Adding button as show/hide nav for phones screens-->
-        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#Navbar">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
             <span class="navbar-toggler-icon"></span>
 
         </button>
@@ -31,7 +31,7 @@
                 <li class="nav-item "><a class="nav-link" href="./index.html"> <span class="fa fa-home fa-lg"></span> Home</a></li>
                 <li class="nav-item active"><a class="nav-link" href="#"> <span class="fa fa-info fa-lg"></span> About</a></li>
                 <li class="nav-item "><a class="nav-link" href="#"> <span class="fa fa-list fa-lg"></span> Menu</a></li>
-                <li class="nav-item "><a class="nav-link" href="#"> <span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+                <li class="nav-item "><a class="nav-link" href="./contactus.html"> <span class="fa fa-address-card fa-lg"></span> Contact</a></li>
             </ul>
 
         </div>
@@ -79,13 +79,13 @@
             <div class="col-12 col-sm">
                 <h2>Corporate Leadership</h2>
                 <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
-                <p>Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
+                <p class="d-none d-lg-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
                 <h3>Dhanasekaran Witherspoon <small>Chief Food Officer</small></h3>
-                <p>Our CFO, Danny, as he is affectionately referred to by his colleagues, comes from a long established family tradition in farming and produce. His experiences growing up on a farm in the Australian outback gave him great appreciation for varieties of food sources. As he puts it in his own words, <em>Everything that runs, wins, and everything that stays, pays!</em></p>
+                <p class="d-none d-lg-block">Our CFO, Danny, as he is affectionately referred to by his colleagues, comes from a long established family tradition in farming and produce. His experiences growing up on a farm in the Australian outback gave him great appreciation for varieties of food sources. As he puts it in his own words, <em>Everything that runs, wins, and everything that stays, pays!</em></p>
                 <h3>Agumbe Tang <small>Chief Taste Officer</small></h3>
-                <p>Blessed with the most discerning gustatory sense, Agumbe, our CTO, personally ensures that every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that ensues if their dish does not meet his exacting standards. He lives by his motto, <em>You click only if you survive my lick.</em></p>
+                <p class="d-none d-lg-block">Blessed with the most discerning gustatory sense, Agumbe, our CTO, personally ensures that every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that ensues if their dish does not meet his exacting standards. He lives by his motto, <em>You click only if you survive my lick.</em></p>
                 <h3>Alberto Somayya <small>Executive Chef</small></h3>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
+                <p class="d-none d-lg-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
             </div>
        </div>
 
