images and media.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <span class="navbar-toggler-icon"></span>
 
             </button>
-            <a class="navbar-brand mr-auto" href="#">Ristorance Con Fusion</a>
-            <div class="collapse navbar-collapse" id="Navbar">
+            <a class="navbar-brand mr-auto" href="#"> <img src="img/logo.png" height="30" width="41"> </a>
+            <div class="navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="#"> <span class="fa fa-home fa-lg"></span> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html"> <span class="fa fa-info fa-lg"></span> About</a></li>
@@ -44,8 +44,8 @@
                    <h1>Mohammad Ahmed</h1>
                    <p>this is a programming thing</p>
                </div>
-               <div class="col-12 col-sm">
-
+               <div class="col-12 col-sm align-self-center">
+                   <img src="img/logo.png" alt="logo" class="img-fluid">
                </div>
            </div>
        </div>
@@ -57,11 +57,16 @@
     <h3>This is Professor</h3>
 </div>
 <div class="col col-sm order-sm-first col-md">
-    <h2>Uthappizza</h2>
-     <p>A unique combination of india worka He is the genious of all and he is doing wvejnfjksSFGHSKJGsfkj
-        sfglkLFGsjfhgjsFGJKHOGWRGJKBSVSFJGBSHGBSFJBGKJGHROUHe is the genious of all and he is doing wvejnfjksSFGHSKJGsfkj
-        sfglkLFGsjfhgjsFGJKHOGWRGJKBSVSFJGBSHGBSFJBGKJGHROUHe is the genious of all and he is doing wvejnfjksSFGHSKJGsfkj
-        sfglkLFGsjfhgjsFGJKHOGWRGJKBSVSFJGBSHGBSFJBGKJGHROU</p>
+    <div class="media">
+        <img src="img/uthappizza.png" alt="" class="d-flex mr-3 img-thumbnail align-self-center">
+        <div class="media-body">
+        <h2 class="mt-0">Uthappizza</h2>
+        <p class="d-none d-sm-block">A unique combination of india worka He is the genious of all and he is doing wvejnfjksSFGHSKJGsfkj
+           sfglkLFGsjfhgjsFGJKHOGWRGJKBSVSFJGBSHGBSFJBGKJGHROUHe is the genious of all and he is doing wvejnfjksSFGHSKJGsfkj
+           </p>
+        </div>
+    </div>
+   
 </div>
 </div>
     <div class="row row-content align-items-center">
@@ -84,11 +89,19 @@
         </div>
 
         <div class="col col-sm order-sm-first col-md">
-            <h2>Mohammad Ahmed</h2>
-            <h4>Excutive Cheif</h4>
-            <p>He is the genious of all and he is doing wvejnfjksSFGHSKJGsfkj
-                sfglkLFGsjfhgjsFGJKHOGWRGJKBSVSFJGBSHGBSFJBGKJGHROU
-            </p>
+            <div class="media">
+                <!--if i wanna put the image right use mr-3-->
+                <img class="d-felx mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="alberto">
+            <div class="media-body">
+                <h2 class="mt-0">Mohammad Ahmed</h2>
+                <h4>Excutive Cheif</h4>
+                <p class="d-none d-sm-block"> He is the genious of all and he is doing wvejnfjksSFGHSKJGsfkj
+                    sfglkLFGsjfhgjsFGJKHOGWRGJKBSVSFJGBSHGBSFJBGKJGHROU
+                </p>
+            </div>
+            
+            </div>
+           
         </div>
     </div>
     </div>
