--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="media">
         <img src="img/uthappizza.png" alt="" class="d-flex mr-3 img-thumbnail align-self-center">
         <div class="media-body">
-        <h2 class="mt-0">Uthappizza</h2>
+        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">Hot</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
         <p class="d-none d-sm-block">A unique combination of india worka He is the genious of all and he is doing wvejnfjksSFGHSKJGsfkj
            sfglkLFGsjfhgjsFGJKHOGWRGJKBSVSFJGBSHGBSFJBGKJGHROUHe is the genious of all and he is doing wvejnfjksSFGHSKJGsfkj
            </p>
