--- a/index.html
+++ b/index.html
@@ -112,6 +112,61 @@
     </header>
 
     <div class="container">
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="img/uthappizza.png" alt="uthappizza">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2 class="mt-0">Uthappizza <span class="badge badge-danger">Hot</span> <span
+                                    class="badge badge-pill badge-secondary">$4.99</span></h2>
+                            <p class="d-none d-sm-block">A unique combination of india worka He is the genious of all and he
+                                is doing wvejnfjksSFGHSKJGsfkj
+                                sfglkLFGsjfhgjsFGJKHOGWRGJKBSVSFJGBSHGBSFJBGKJGHROUHe is the genious of all and he is doing
+                                wvejnfjksSFGHSKJGsfkj
+                            </p>
+
+                            </div>
+
+
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/buffet.png" alt="buffet">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2 class="mt-0">Buffet <span class="badge badge-danger">Hot</span> <span
+                                    class="badge badge-pill badge-secondary">$4.99</span></h2>
+                            <p class="d-none d-sm-block">Where no one else can dream of a buffet we provided youwith 
+                                a buffet that suitable for everyone in the world
+                            </p>
+
+                        </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/alberto.png" alt="logo">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2 class="mt-0">Our Logo</h2>
+                            <p class="d-none d-sm-block">Here we go our logo that is suitable for everyone on earth that 
+                                everyone now can reconginse us immedailty.
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <ol class="carousel-indicators">
+                    <li data-target="#mycarosuel" data-slide-to="0" class="active"></li>
+                    <li data-target="#mycarosuel" data-slide-to="1"></li>
+                    <li data-target="#mycarosuel" data-slide-to="2"></li>
+                </ol>
+                <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </a>
+
+            </div>
+        </div>
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>This is Professor</h3>
